# polystep-or

./: .gitignore  LICENSE  README.md  exp_gpu_cmst.py  requirements.txt  run.sh
polystep/: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  LIMITATIONS.md  README.md  pyproject.toml
polystep/.github/workflows/: ci.yml
polystep/docs/: api_overview.md  reproducibility.md
polystep/examples/: 01_quickstart_2d.py  02_snn_starter.py  03_rl_cartpole.py  04_maxsat_10k.py  05_mnist.py  06_loihi_snn_polystep.py  README.md  _snn_demo.py
polystep/experiments/: BENCHMARKS.md  EXPERIMENT_INDEX.md  README.md
polystep/experiments/baselines/: openai_es.py  sgd_baseline.py  sls_pysat.py  spsa.py
polystep/experiments/results/: README.md
polystep/experiments/runners/: ablation_ot_vs_softmax.py  common.py  hardened_env.py  nondiff_data.py  nondiff_models.py  run_all_paper.sh  run_elevation.py  run_fill_ablation_grid.py  run_gpt2_finetune.py  run_maxsat.py  run_maxsat_softmax_scaling.py  run_mnist.py  run_moe.py  run_rl.py  run_timeseries.py
polystep/experiments/scripts/: aggregate_results.py
polystep/src/polystep/: __init__.py  _compiled.py  _step_blockwise.py  _step_momentum.py  _step_monolithic.py  adaptive_subspace.py  api.py  blockwise.py  cma.py  cma_subspace.py  cost_nn.py  costs.py  dynamics.py  epsilon.py  geometry.py  hybrid_subspace.py  optimizer.py  quadratic_model.py  solver.py  subspace.py  transform.py
polystep/src/polystep/benchmarks/: __init__.py  baselines.py  utils.py
polystep/src/polystep/layers/: __init__.py  attention.py  rnn.py
polystep/src/polystep/objectives/: __init__.py  base.py  synthetic.py
polystep/src/polystep/projection/: __init__.py  sparse.py
polystep/src/polystep/solvers/: __init__.py  base.py  greedy.py  kl_softmax.py  sinkhorn.py  softmax.py  tempered_softmax.py
polystep/tests/: conftest.py  test_ablation_solvers.py  test_adaptive_mnist.py  test_adaptive_subspace.py  test_api.py  test_baseline_fairness.py  test_benchmarks.py  test_blockwise.py  test_bug_regressions.py  test_cma.py  test_cma_subspace.py  test_compiled.py  test_cost_nn.py  test_costs.py  test_dfo_features.py  test_dynamics.py  test_geometry.py  test_hybrid_mnist.py  test_hybrid_subspace.py  test_integration.py  test_kl_softmax.py  test_layers.py  test_mixed_precision.py  test_mnist.py  test_nondiff_data.py  test_nondiff_models.py  test_numerical_stress.py  test_optimizer.py  test_quadratic_model.py  test_rl_benchmarks.py  test_sinkhorn.py  test_sinkhorn_correctness.py  test_softmax.py  test_softmax_integration.py  test_solver_numerics.py  test_solvers_base.py  test_sparse_integration.py  test_sparse_projection.py  test_subspace.py  test_subspace_blockwise.py  (+3 more)
(+952 files in other folders)
